--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Blog_Managment
 
 
 # Spring Boot application properties
-spring.datasource.url=jdbc:mysql://localhost:3306/blog
+spring.datasource.url=jdbc:mysql://13.126.2.67:3306/blog?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=Rahul@2003
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
