--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,9 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+#
+google.api.key=AIzaSyBtGgDwQF0OucvjZaaOS5RBLCbcEt8k4dg
+google.api.url=https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent
+
 
 
